boot/tests/errors/record_redundant_err/record_redundant_err.c
%s The field '%s' is redundant for record '%s'.
